SyntacticAnalyzer/tests/fail/sentenciasimple-expresion02.java
class foo {
	ctor (int n1)
	var int n2;
	{
		// llamada mal formada
		( objeto ().llamada.new llamada());
	}
}
